dash-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dash-g
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - dash.byz.com
    tls:
      mode: PASSTHROUGH # enables HTTPS on this port

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dash-vs
spec:
  hosts:
  - "*.byz.com"
  gateways:
  - dash-g
  tls:
  - match:
    - port: 443
      sniHosts:
      - dash.byz.com
    route:
    - destination:
        host: my-kubernetes-dashboard
